--- a/YuniClient/eeprom.resx
+++ b/YuniClient/eeprom.resx
@@ -120,4 +120,20 @@
   <metadata name="serialPort1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="label8.Text" xml:space="preserve">
+    <value>TIME               = 1,
+SENSOR_LEVEL_HIGHER= 2,
+SENSOR_LEVEL_LOWER = 3,          
+RANGE_HIGHER       = 4, (224,226,228)  
+RANGE_LOWER        = 5,              
+DISTANCE           = 6,                
+DISTANCE_LEFT      = 7,                 
+DISTANCE_RIGHT     = 8</value>
+  </data>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>122, 17</value>
+  </metadata>
+  <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>255, 17</value>
+  </metadata>
 </root>
