[m49] Implement settings menu, some key-click menu changes

--- a/YuniClientMobile/res/values/strings.xml
+++ b/YuniClientMobile/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="A">A</string>
     <string name="S">S</string>
     <string name="D">D</string>
+    <string name="hex_folder_def">/mnt/sdcard/hex/</string>
+    <string name="log_folder_def">/mnt/sdcard/YuniData/</string>
 </resources>
