--- a/YuniClientMobile/ChangeLog
+++ b/YuniClientMobile/ChangeLog
@@ -4,6 +4,37 @@ YuniClientMobile 2.0 "Miranda" (?? ?? ????)
 
     * In development
 
+YuniClientMobile 1.3 "Ice-planet" (04 may 2011)
+
+    YuniClientMobile 1.3 - Implements features expected from mobile client
+    with just basic UI.
+
+    ==== Features ====
+    * Clean-up in BT devices list - switch between paired devices and device discovery by swipe
+    * Implement Quorra final api
+    * Rewrote joystick code
+    * Move some parts of joystick calculation to jni
+    * Clean-up in flash data creation & storage
+    * HUGE clean-up in YuniClient class
+    * Rewrote bluetooth connection & data handling
+    * Implement new setting menu, you can set folders for hex files and for terminal logs
+    * New nice and shiny UI for accelerometer
+    * Many Bug & crash fixes
+
+    ==== Supported microcontrollers ====
+
+    * ATmega16
+    * ATmega32
+    * ATmega48
+    * ATmega88
+    * ATmega128 (only 16-bit addresses available)
+    * ATmega162
+    * ATmega168
+
+    ==== Statistics ====
+
+    * 15 revision total
+    
 YuniClientMobile 1.2 "Ice-planet" (22 april 2011)
 
     YuniClientMobile 1.2 - Implements features expected from mobile client
