--- a/YuniClientMobile/ChangeLog
+++ b/YuniClientMobile/ChangeLog
@@ -4,7 +4,28 @@ YuniClientMobile 2.0 "Miranda" (?? ?? ????)
 
     * In development
 
-YuniClientMobile 1.3 "Ice-planet" (04 may 2011)
+YuniClientMobile 1.3.1 "Ice-planet" (05 june 2011)
+
+    YuniClientMobile 1.3.1 - Hotfix for version 1.3
+
+    ==== Features ====
+    * Fix bugs in new accelerometer UI
+
+    ==== Supported microcontrollers ====
+
+    * ATmega16
+    * ATmega32
+    * ATmega48
+    * ATmega88
+    * ATmega128 (only 16-bit addresses available)
+    * ATmega162
+    * ATmega168
+
+    ==== Statistics ====
+
+    * 2 revision total
+    
+YuniClientMobile 1.3 "Ice-planet" (04 june 2011)
 
     YuniClientMobile 1.3 - Implements features expected from mobile client
     with just basic UI.
