--- a/YuniClientMobile/ChangeLog
+++ b/YuniClientMobile/ChangeLog
@@ -4,6 +4,40 @@ YuniClientMobile 2.0 "Miranda" (?? ?? ????)
 
     * In development
 
+YuniClientMobile 1.4 "Ice-planet" (02 july 2011)
+
+    YuniClientMobile 1.4 - Implements features expected from mobile client
+    with just basic UI.
+
+    ==== Features ====
+    * Precalculate elements positions in accelerometer UI
+    * Clean-up in bluetooth service
+    * Rewrote autoscroll code
+    * BallUI renamed to Joystick
+    * Renamed Quorra protocol to Chessbot protocol
+    * Smoother speed calculation for Chessbot and Quorra protocols
+    * Added start dialog to accelerometer UI so that you can 
+      prepare the phone into default position
+    * Added support for ATmega328, its used in 3pi robot
+    * Minor clean-ups
+    * Bug & crash fixes
+    
+
+    ==== Supported microcontrollers ====
+
+    * ATmega16
+    * ATmega32
+    * ATmega48
+    * ATmega88
+    * ATmega128 (only 16-bit addresses available)
+    * ATmega162
+    * ATmega168
+    * ATmega328
+
+    ==== Statistics ====
+
+    * 12 revision total
+
 YuniClientMobile 1.3.1 "Ice-planet" (05 june 2011)
 
     YuniClientMobile 1.3.1 - Hotfix for version 1.3
